syntax = "proto3";

package proto;

option go_package = "github.com/two-phase-commit-demo/gateway/proto";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest {
  string order_id = 1;
  int32 price = 2;
}

message CreateOrderResponse {
  string message = 1;
  bool success = 2;
}
